RESOLVED FIXED274866
[Site Isolation] Fix date/time pickers
https://bugs.webkit.org/show_bug.cgi?id=274866
Summary [Site Isolation] Fix date/time pickers
Charlie Wolfe
Reported 2024-05-29 15:15:06 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-29 15:17:03 PDT
Charlie Wolfe
Comment 2 2024-05-29 15:18:48 PDT
EWS
Comment 3 2024-05-30 09:54:31 PDT
Committed 279525@main (b777f464fd85): <https://commits.webkit.org/279525@main> Reviewed commits have been landed. Closing PR #29253 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.