[Site Isolation] Fix date/time pickers https://bugs.webkit.org/show_bug.cgi?id=274866 rdar://128967740

Reviewed by Alex Christensen and Pascoe.

A few more layout tests pass with this, also tested locally on Mac.

* LayoutTests/platform/mac-site-isolation/TestExpectations:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didChooseDate):
(WebKit::WebPageProxy::didEndDateTimePicker):

Canonical link: https://commits.webkit.org/279525@main